# cs4080

./: .gitignore  README.md
hw0/: CMakeLists.txt  README.md
hw0/src/: main.cpp
hw1/analyze/: hw1_analyze.cpp
hw1/src/: MatrixMultiply.cpp  hw1.cpp
hw2/: CMakeLists.txt
hw2/src/: main.cpp  superpixel_slic.cpp  superpixel_slic.hpp  util.cpp  util.hpp
hw3/: CMakeLists.txt
hw3/src/: superpixel_slic.cpp  superpixel_slic.hpp
hw4/: CMakeLists.txt  build.sh  run_batch.sh
hw4/src/: main.cpp  superpixel_slic.cpp  superpixel_slic.hpp  util.cpp  util.hpp
hw5/: Makefile  deviceQuery.out  findgllib.mk  gold_standard.cpp  gold_standard.hpp  kernels.cu  kernels.cuh  main.cu  runner  util.cpp  util.hpp
hw6/: CMakeLists.txt  runner
hw6/make/: Makefile
hw6/report/times/: gpu-v3-2.csv  gpu-v3-3.csv  gpu-v3.csv
hw6/src/: gold_standard.cpp  gold_standard.hpp  main.cpp  main.cu  superpixel_gslic.cu  superpixel_gslic.cuh  types.h  util.cpp  util.hpp
mpi/: Makefile  mpi_test.cpp  run_dart_board.sh  run_mpi_test.sh  run_word_counter.sh  sample_file_word_count.cpp
